--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,7 +1,7 @@
 .button {
     padding: 10px 15px;
     background: var(--tg-theme-button-color);
-    color: var(--tg-theme-text-color);
+    color: var(--tg-theme-button-text-color);
     border: none;
     outline: none;
     cursor: pointer;
