--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,8 +1,8 @@
 .button {
-    padding: 20px 25px;
+    padding: 10px 15px;
     background: var(--tg-theme-button-color);
     color: var(--tg-theme-button-text-color);
-    border: none;
+    border: 1px solid var(--tg-theme-button-text-color);
     outline: none;
     cursor: pointer;
 }
