--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -9,6 +9,8 @@
     width: 100%;
     padding: 10px;
     margin-top: 15px;
+    border-radius: 8px;
+    border: 1px solid var(--tg-theme-button-color);
 }
 
 .select {
