--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -8,12 +8,11 @@
 .input {
     width: 100%;
     padding: 10px;
-    margin-top: 15px;
+    margin-top: 20px;
     border-radius: 8px;
     border: 1px solid var(--tg-theme-button-color);
 }
 
-.select {
-    padding: 10px;
-    margin-top: 15px;
+.input:focus {
+    outline: none;
 }
