--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "JetBrains Mono", sans-serif;
+  font-family: "JetBrains Mono Light", sans-serif;
+}
+
+h1, h2, h3, h4 {
+  font-family: "JetBrains Mono ExtraLight", sans-serif;
 }
 
 body {
