--- a/src/components/ProductItem/ProductItem.css
+++ b/src/components/ProductItem/ProductItem.css
@@ -7,14 +7,14 @@
 
 .img {
     width: 100%;
-    height: 100px;
-    margin: 0 auto;
-}
-
-.description {
-    font-size: 0.8em;
+    height: 150px;
+    margin: 10px auto;
 }
 
 .addBtn {
     width: 100%;
+}
+
+.price {
+    margin: 10px 0;
 }
